--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,13 +18,13 @@
     "framer-motion": "^12.16.0",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.511.0",
-    "next": "15.3.3",
+    "next": "^16.0.7",
     "primereact": "^10.9.6",
     "quill": "^2.0.3",
-    "react": "^19.0.0",
-    "react-count": "^0.2.4",
+    "react": "^19.2.1",
+    "react-count": "^0.2.2",
     "react-countup": "^6.5.3",
-    "react-dom": "^19.0.0",
+    "react-dom": "^19.2.1",
     "react-hook-form": "^7.57.0",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
